# unstatus

./: .cta.json  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PRIVACY.md  README.md  ROADMAP.md  TERMS.md  bunfig.toml  package.json  plan.md  test.txt  tsconfig.json  vite.config.ts
apps/docs/: .gitignore  mdx-components.tsx  next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/docs/app/: layout.tsx
apps/docs/lib/: get-llm-text.ts
apps/web/: components.json  package.json  vite.config.ts
apps/web/public/: manifest.json
apps/web/scripts/: seed-autumn.ts
apps/web/src/: routeTree.gen.ts  styles.css
apps/worker/: DISCLAIMER.md  package.json  railway.json
apps/worker-rs/: Cargo.toml  railway.json
apps/worker-rs/src/: api.rs  config.rs  error.rs  external_service_runner.rs  http.rs  incidents.rs  lib.rs  main.rs  maintenance.rs  models.rs  notifier.rs  repo.rs  runner.rs  scheduler.rs  services.rs  types.rs
apps/worker-rs/src/checkers/: external_status.rs  http.rs  mod.rs  ping.rs  postgres.rs  redis.rs  tcp.rs
apps/worker-rs/src/checks/: external_status.rs  http.rs  mod.rs  ping.rs  tcp.rs
apps/worker-rs/src/db/: checks.rs  external.rs  maintenance.rs  mod.rs  monitors.rs
apps/worker-rs/src/notifications/: discord.rs  email.rs  mod.rs  templates.rs
apps/worker/src/: autumn.ts  db.ts  external-service-runner.ts  incidents.ts  index.ts  limiter.ts  maintenance.ts  monitor-perf.ts  notify.ts  notify.tsx  polar-usage.ts  runner.ts  (+1 more)
cf-proxy/: package.json  tsconfig.json  wrangler.jsonc
cf-proxy/src/: index.ts  proxy.test.ts  proxy.ts
prisma/: schema.prisma
src/: routeTree.gen.ts
src/components/: org-context.tsx  org-switcher.tsx  public-status-view.tsx  user-dropdown.tsx
src/lib/: auth.ts  custom-domain.test.ts  custom-domain.ts  env.ts  hostnames.ts  prisma.ts
src/routes/: __root.tsx  _authed.tsx  index.tsx  login.tsx
worker/: package.json  railway.json  tsconfig.json
worker/src/: db.ts  index.ts  runner.ts
(+222 files in other folders)
