[package]
name = "worker-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/lassejlv/unstatus"
description = "Rust sidecar worker for Unstatus"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
cuid2 = "0.1"
futures = "0.3"
maud = "0.27"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "derive", "json", "macros", "postgres", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
