[package]
name = "worker-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
futures = "0.3"
redis = { version = "0.29", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "postgres", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
httpmock = "0.7"
tower = { version = "0.5", features = ["util"] }
